# NERVA

./: .gitignore  BROWSER_AUTOMATION.md  FIX_MIC_SOF.md  HOW_TO_CHAT.md  KOKORO_SETUP.md  KOKORO_STATUS.md  MIC_FIX_README.md  MODELS.md  MODEL_RECOMMENDATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  START_HERE.md  TESTING_QUICK_START.md  TEST_WITH_MIC.md  TROUBLESHOOTING.md  TTS_USAGE.md  VISION_BROWSER_IMPLEMENTATION.md  VOICE_COMMANDS_GUIDE.md  VOICE_SETUP.md  VOICE_TESTING_GUIDE.md  WAKE_WORD_IMPLEMENTATION.md  chat.py  collect_wake_word_samples.py  function_report.json  generate_synthetic_nerva.py  github_tools.py  pyproject.toml  run_console.sh  test_browser_automation.py  test_console.py  test_google_skills.py  test_kokoro.py  test_mic_debug.py  test_mic_fixed.py  test_mic_raw.py  test_microphone.py  test_vision_agent.py  test_vision_quick.py  (+5 more)
nerva/: __init__.py  bus.py  config.py  console.py  dag.py  main.py  run_context.py  sollol_integration.py  types.py  workflows.py
nerva/agents/: __init__.py  google_skills.py  task_dispatcher.py  vision_action_agent.py
nerva/automation/: __init__.py  playbooks.py  playbooks_common.py  playbooks_generic.py  playbooks_google.py  playbooks_lookup.py  playbooks_research.py  ui_planner.py
nerva/desktop/: __init__.py  automation.py
nerva/filesystem/: __init__.py  navigator.py  repo_manager.py
nerva/github/: __init__.py  manager.py
nerva/hydra_adapter/: __init__.py  context_builder.py
nerva/knowledge/: __init__.py  graph.py
nerva/life/: __init__.py  finance.py
nerva/llm/: __init__.py  client_base.py  factory.py  mock_client.py  qwen_client.py  sollol_client.py
nerva/memory/: __init__.py  embedder.py  schemas.py  store.py
nerva/ops/: __init__.py  collectors.py  cycles.py
nerva/repos/: __init__.py  repo_index.py
nerva/task_tracking/: __init__.py  thread_store.py
nerva/tools/: __init__.py  browser_automation.py
nerva/vision/: __init__.py  qwen_vision.py  screenshot.py
nerva/voice/: __init__.py  kokoro_tts.py  wake_word.py  whisper_asr.py  whisper_asr_backup.py  whisper_asr_fixed.py
